--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                                             <div class="icon"><span class="flaticon-book"></span></div>
                                                         </div>
                                                     </div>
-                                                    <h2>作品经历</h2>
+                                                    <h2>工作经历</h2>
                                                 </div>
                                                 <div class="timeline-block">
                                                     <div class="inner-box">
