--- a/index.html
+++ b/index.html
@@ -371,9 +371,9 @@
                                     <div class="text">
                                         工作上，本人积极主动，善于调动团队工作积极性，环境适应能力强，
                                         拥有多次兼职经历并已积累较多的工作经验；交际上，本人拥有广泛的交际圈，
-                                        待人温和；能力上，本人精通C++、Python三门计算机语言，
-                                        并熟练掌握面向对象的程序设计，同时对单片机、操作系统、
-                                        数据库及软件测试也有一定程度的了解；性格上，本人做事情认真负责，
+                                        待人温和；能力上，本人熟悉C++、Java、Python三门计算机语言，
+                                        并掌握Django、Flask等常用框架的搭建和应用，同时对单片机、嵌入式系统
+                                        及软件测试也有一定程度的了解；性格上，本人做事情认真负责，
                                         不轻言放弃，不惧挑战，善于听取他人有利意见并从中不断学习。
                                     </div>
                                 </div>
