--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                                 <a href="https://wwu.lanzoul.com/iIcFt0go2ine" class="theme-btn btn-style-one" title="密码：xsl">个人简历</a>
                             </div>
                         </div>
+                        
                         <div class="card-inner-box">
                             <header class="header wow fadeInLeft" data-wow-duration="1.5s">
                                 <ul class="main-menu">
@@ -156,7 +157,7 @@
                                                     <div class="inner-text count-box"><span class="count-text"
                                                             data-stop="30" data-speed="2000"></span>%</div>
                                                 </div>
-                                                <h3>HTML</h3>
+                                                <h3>前端</h3>
                                             </div>
                                         </div>
                                         <div class="skill-block col-md-3 col-sm-4 col-xs-6">
@@ -176,11 +177,11 @@
                                                 <div class="graph-outer">
                                                     <input type="text" class="dial" data-fgColor="#51dbc3"
                                                         data-bgColor="#f5f5f5" data-width="90" data-height="90"
-                                                        data-linecap="normal" value="25">
+                                                        data-linecap="normal" value="40">
                                                     <div class="inner-text count-box"><span class="count-text"
-                                                            data-stop="25" data-speed="2000"></span>%</div>
+                                                            data-stop="40" data-speed="2000"></span>%</div>
                                                 </div>
-                                                <h3>Linux </h3>
+                                                <h3>Java </h3>
                                             </div>
                                         </div>
                                     </div>
@@ -430,7 +431,7 @@
     <script src="js/jquery.nicescroll.min.js"></script>
     <script src="js/particle-alone.js"></script>
     <script src="js/script.js"></script>
-    <script src="http://ditu.google.cn/maps/api/js?key=AIzaSyATY4Rxc8jNvDpsK8ZetC7JyN4PFVYGCGM"></script>
+    <!--script src="http://ditu.google.cn/maps/api/js?key=AIzaSyATY4Rxc8jNvDpsK8ZetC7JyN4PFVYGCGM"></！script>-->
     <script src="js/gmaps.js"></script>
     <script src="js/map-script.js"></script>
 </body>
