--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
                                                     <input type="text" class="dial" data-fgColor="#9147ff"
                                                         data-bgColor="#f5f5f5" data-width="90" data-height="90"
                                                         data-linecap="normal" value="40">
-                                                    <div class="inner-text count-box"><span class="count-text"
-                                                            data-stop="40" data-speed="2000"></span>%</div>
+                                                    <div class="inner-text count-box">
+                                                        <span class="count-text" data-stop="40" data-speed="2000"></span>%
+                                                    </div>
                                                 </div>
                                                 <h3>C++</h3>
                                             </div>
